fix scrollable in google map search on tablet

--- a/client/imports/ui/search_page/search_page.css
+++ b/client/imports/ui/search_page/search_page.css
@@ -72,6 +72,18 @@
     .search-page-form-mobile {
         display: none;
     }
+    .search-page-container {
+        height: 90%!important;
+    }
+    .list-result.inline-list {
+        position: absolute;
+        bottom: -35px!important;
+        z-index: 100;
+        height: 300px;
+        display: inline-flex;
+        overflow-x: auto;
+        left: 0px!important;
+    }
 }
 
 @media only screen and (max-width: 600px) {
